@@ -49,6 +49,10 @@ class ApiHelp extends ApiBase {
 	public function shouldCheckMaxlag() {
 		return false;
 	}
+	
+	public function shouldCheckAvglag() {
+		return false;
+	}
 
 	public function isReadMode() {
 		return false;
